# hs-opentelemetry-effectful

./: Jenkinsfile  README.md  flake.nix  hie.yaml  hs-opentelemetry-effectful.cabal
src/Effectful/: OpenTelemetry.hs
